feat: get topics (#1)
